# bi-lstm

./: .gitignore  pyproject.toml
bi_lstm/: main.py  model_training.py
